[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tilemaps/office_layer2.tsx" type="TileSet" id=1]
[ext_resource path="res://Tilemaps/office_layer1.tsx" type="TileSet" id=2]
[ext_resource path="res://Interactables/DoorManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interactables/ElevatorDoor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/OfficeFloor13.gd" type="Script" id=5]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interactables/OfficeDoor.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 5.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 40 )

[node name="OfficeFloor13" type="Node2D"]
script = ExtResource( 5 )

[node name="Layer1" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131074, 177, 0, 131075, 177, 0, 131076, 178, 0, 131077, 80, 0, 131078, 81, 0, 131079, 81, 0, 131080, 81, 0, 131081, 81, 0, 131082, 81, 0, 131083, 81, 0, 131084, 81, 0, 131085, 81, 0, 131086, 82, 0, 131087, 176, 0, 131088, 177, 0, 131089, 177, 0, 131099, 177, 0, 131100, 177, 0, 131101, 178, 0, 131102, 80, 0, 131103, 81, 0, 131104, 81, 0, 131105, 81, 0, 131106, 81, 0, 131107, 81, 0, 131108, 81, 0, 131109, 81, 0, 131110, 81, 0, 131111, 82, 0, 131112, 176, 0, 131113, 177, 0, 131114, 177, 0, 196610, 181, 0, 196611, 181, 0, 196612, 182, 0, 196613, 84, 0, 196614, 85, 0, 196615, 85, 0, 196616, 85, 0, 196617, 85, 0, 196618, 85, 0, 196619, 85, 0, 196620, 85, 0, 196621, 85, 0, 196622, 86, 0, 196623, 180, 0, 196624, 181, 0, 196625, 181, 0, 196635, 181, 0, 196636, 181, 0, 196637, 182, 0, 196638, 84, 0, 196639, 85, 0, 196640, 85, 0, 196641, 85, 0, 196642, 85, 0, 196643, 85, 0, 196644, 85, 0, 196645, 85, 0, 196646, 85, 0, 196647, 86, 0, 196648, 180, 0, 196649, 181, 0, 196650, 181, 0, 262146, 193, 0, 262147, 193, 0, 262148, 194, 0, 262149, 96, 0, 262150, 97, 0, 262151, 97, 0, 262152, 97, 0, 262153, 97, 0, 262154, 97, 0, 262155, 97, 0, 262156, 97, 0, 262157, 97, 0, 262158, 105, 0, 262159, 192, 0, 262160, 193, 0, 262161, 193, 0, 262171, 193, 0, 262172, 193, 0, 262173, 194, 0, 262174, 96, 0, 262175, 97, 0, 262176, 97, 0, 262177, 97, 0, 262178, 97, 0, 262179, 97, 0, 262180, 97, 0, 262181, 97, 0, 262182, 97, 0, 262183, 105, 0, 262184, 192, 0, 262185, 193, 0, 262186, 193, 0, 327682, 90, 0, 327683, 91, 0, 327684, 91, 0, 327685, 92, 0, 327686, 107, 0, 327687, 107, 0, 327688, 107, 0, 327689, 107, 0, 327690, 107, 0, 327691, 107, 0, 327692, 107, 0, 327693, 107, 0, 327694, 107, 0, 327695, 91, 0, 327696, 91, 0, 327697, 91, 0, 327698, 176, 0, 327699, 177, 0, 327700, 177, 0, 327701, 177, 0, 327702, 177, 0, 327703, 177, 0, 327704, 177, 0, 327705, 177, 0, 327706, 178, 0, 327707, 90, 0, 327708, 91, 0, 327709, 91, 0, 327710, 92, 0, 327711, 107, 0, 327712, 107, 0, 327713, 107, 0, 327714, 107, 0, 327715, 107, 0, 327716, 107, 0, 327717, 107, 0, 327718, 107, 0, 327719, 107, 0, 327720, 91, 0, 327721, 91, 0, 327722, 91, 0, 393218, 106, 0, 393219, 107, 0, 393220, 107, 0, 393221, 107, 0, 393222, 107, 0, 393223, 107, 0, 393224, 107, 0, 393225, 107, 0, 393226, 107, 0, 393227, 107, 0, 393228, 107, 0, 393229, 107, 0, 393230, 107, 0, 393231, 107, 0, 393232, 107, 0, 393233, 107, 0, 393234, 180, 0, 393235, 181, 0, 393236, 181, 0, 393237, 181, 0, 393238, 181, 0, 393239, 181, 0, 393240, 181, 0, 393241, 181, 0, 393242, 182, 0, 393243, 106, 0, 393244, 107, 0, 393245, 107, 0, 393246, 107, 0, 393247, 107, 0, 393248, 107, 0, 393249, 107, 0, 393250, 107, 0, 393251, 107, 0, 393252, 107, 0, 393253, 107, 0, 393254, 107, 0, 393255, 107, 0, 393256, 107, 0, 393257, 107, 0, 393258, 107, 0, 458754, 106, 0, 458755, 107, 0, 458756, 107, 0, 458757, 107, 0, 458758, 107, 0, 458759, 107, 0, 458760, 107, 0, 458761, 107, 0, 458762, 107, 0, 458763, 107, 0, 458764, 107, 0, 458765, 107, 0, 458766, 107, 0, 458767, 107, 0, 458768, 107, 0, 458769, 107, 0, 458770, 192, 0, 458771, 193, 0, 458772, 193, 0, 458773, 193, 0, 458774, 193, 0, 458775, 193, 0, 458776, 193, 0, 458777, 193, 0, 458778, 194, 0, 458779, 106, 0, 458780, 107, 0, 458781, 107, 0, 458782, 107, 0, 458783, 107, 0, 458784, 107, 0, 458785, 107, 0, 458786, 107, 0, 458787, 107, 0, 458788, 107, 0, 458789, 107, 0, 458790, 107, 0, 458791, 107, 0, 458792, 107, 0, 458793, 107, 0, 458794, 107, 0, 524290, 106, 0, 524291, 107, 0, 524292, 107, 0, 524293, 107, 0, 524294, 107, 0, 524295, 107, 0, 524296, 107, 0, 524297, 107, 0, 524298, 107, 0, 524299, 107, 0, 524300, 107, 0, 524301, 107, 0, 524302, 107, 0, 524303, 107, 0, 524304, 107, 0, 524305, 107, 0, 524306, 91, 0, 524307, 91, 0, 524308, 91, 0, 524309, 91, 0, 524310, 91, 0, 524311, 91, 0, 524312, 91, 0, 524313, 91, 0, 524314, 91, 0, 524315, 92, 0, 524316, 107, 0, 524317, 107, 0, 524318, 107, 0, 524319, 107, 0, 524320, 107, 0, 524321, 107, 0, 524322, 107, 0, 524323, 107, 0, 524324, 107, 0, 524325, 107, 0, 524326, 107, 0, 524327, 107, 0, 524328, 107, 0, 524329, 107, 0, 524330, 107, 0, 589826, 106, 0, 589827, 107, 0, 589828, 107, 0, 589829, 107, 0, 589830, 107, 0, 589831, 107, 0, 589832, 107, 0, 589833, 107, 0, 589834, 107, 0, 589835, 107, 0, 589836, 107, 0, 589837, 107, 0, 589838, 107, 0, 589839, 107, 0, 589840, 107, 0, 589841, 107, 0, 589842, 107, 0, 589843, 107, 0, 589844, 107, 0, 589845, 107, 0, 589846, 107, 0, 589847, 107, 0, 589848, 107, 0, 589849, 107, 0, 589850, 107, 0, 589851, 107, 0, 589852, 107, 0, 589853, 107, 0, 589854, 107, 0, 589855, 107, 0, 589856, 107, 0, 589857, 107, 0, 589858, 107, 0, 589859, 107, 0, 589860, 107, 0, 589861, 107, 0, 589862, 107, 0, 589863, 107, 0, 589864, 107, 0, 589865, 107, 0, 589866, 107, 0, 655362, 106, 0, 655363, 107, 0, 655364, 107, 0, 655365, 107, 0, 655366, 107, 0, 655367, 107, 0, 655368, 107, 0, 655369, 107, 0, 655370, 107, 0, 655371, 107, 0, 655372, 107, 0, 655373, 107, 0, 655374, 107, 0, 655375, 107, 0, 655376, 107, 0, 655377, 107, 0, 655378, 107, 0, 655379, 107, 0, 655380, 107, 0, 655381, 107, 0, 655382, 107, 0, 655383, 107, 0, 655384, 107, 0, 655385, 107, 0, 655386, 107, 0, 655387, 107, 0, 655388, 107, 0, 655389, 107, 0, 655390, 107, 0, 655391, 107, 0, 655392, 107, 0, 655393, 107, 0, 655394, 107, 0, 655395, 107, 0, 655396, 107, 0, 655397, 107, 0, 655398, 107, 0, 655399, 107, 0, 655400, 107, 0, 655401, 107, 0, 655402, 107, 0, 720898, 106, 0, 720899, 107, 0, 720900, 107, 0, 720901, 107, 0, 720902, 107, 0, 720903, 107, 0, 720904, 107, 0, 720905, 107, 0, 720906, 107, 0, 720907, 107, 0, 720908, 107, 0, 720909, 107, 0, 720910, 107, 0, 720911, 107, 0, 720912, 107, 0, 720913, 107, 0, 720914, 107, 0, 720915, 107, 0, 720916, 107, 0, 720917, 107, 0, 720918, 107, 0, 720919, 107, 0, 720920, 107, 0, 720921, 107, 0, 720922, 107, 0, 720923, 107, 0, 720924, 107, 0, 720925, 107, 0, 720926, 107, 0, 720927, 107, 0, 720928, 107, 0, 720929, 107, 0, 720930, 107, 0, 720931, 107, 0, 720932, 107, 0, 720933, 107, 0, 720934, 107, 0, 720935, 107, 0, 720936, 107, 0, 720937, 107, 0, 720938, 107, 0, 786434, 106, 0, 786435, 107, 0, 786436, 107, 0, 786437, 107, 0, 786438, 107, 0, 786439, 107, 0, 786440, 107, 0, 786441, 107, 0, 786442, 107, 0, 786443, 107, 0, 786444, 107, 0, 786445, 107, 0, 786446, 107, 0, 786447, 107, 0, 786448, 107, 0, 786449, 107, 0, 786450, 107, 0, 786451, 107, 0, 786452, 107, 0, 786453, 107, 0, 786454, 107, 0, 786455, 107, 0, 786456, 107, 0, 786457, 107, 0, 786458, 107, 0, 786459, 107, 0, 786460, 107, 0, 786461, 107, 0, 786462, 107, 0, 786463, 107, 0, 786464, 107, 0, 786465, 107, 0, 786466, 107, 0, 786467, 107, 0, 786468, 107, 0, 786469, 107, 0, 786470, 107, 0, 786471, 107, 0, 786472, 107, 0, 786473, 107, 0, 786474, 107, 0, 851970, 106, 0, 851971, 107, 0, 851972, 107, 0, 851973, 107, 0, 851974, 107, 0, 851975, 107, 0, 851976, 107, 0, 851977, 107, 0, 851978, 107, 0, 851979, 107, 0, 851980, 107, 0, 851981, 107, 0, 851982, 107, 0, 851983, 107, 0, 851984, 107, 0, 851985, 107, 0, 851995, 106, 0, 851996, 107, 0, 851997, 107, 0, 851998, 107, 0, 851999, 107, 0, 852000, 107, 0, 852001, 107, 0, 852002, 107, 0, 852003, 107, 0, 852004, 107, 0, 852005, 107, 0, 852006, 107, 0, 852007, 107, 0, 852008, 107, 0, 852009, 107, 0, 852010, 107, 0, 917506, 106, 0, 917507, 107, 0, 917508, 107, 0, 917509, 107, 0, 917510, 107, 0, 917511, 107, 0, 917512, 107, 0, 917513, 107, 0, 917514, 107, 0, 917515, 107, 0, 917516, 107, 0, 917517, 107, 0, 917518, 107, 0, 917519, 107, 0, 917520, 107, 0, 917521, 107, 0, 917531, 106, 0, 917532, 107, 0, 917533, 107, 0, 917534, 107, 0, 917535, 107, 0, 917536, 107, 0, 917537, 107, 0, 917538, 107, 0, 917539, 107, 0, 917540, 107, 0, 917541, 107, 0, 917542, 107, 0, 917543, 107, 0, 917544, 107, 0, 917545, 107, 0, 917546, 107, 0, 983042, 106, 0, 983043, 107, 0, 983044, 107, 0, 983045, 107, 0, 983046, 107, 0, 983047, 107, 0, 983048, 107, 0, 983049, 107, 0, 983050, 107, 0, 983051, 107, 0, 983052, 107, 0, 983053, 107, 0, 983054, 107, 0, 983055, 107, 0, 983056, 107, 0, 983057, 107, 0, 983067, 106, 0, 983068, 107, 0, 983069, 107, 0, 983070, 107, 0, 983071, 107, 0, 983072, 107, 0, 983073, 107, 0, 983074, 107, 0, 983075, 107, 0, 983076, 107, 0, 983077, 107, 0, 983078, 107, 0, 983079, 107, 0, 983080, 107, 0, 983081, 107, 0, 983082, 107, 0 )

[node name="Layer2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65564, 107, 0, 131075, 187, 0, 131076, 188, 0, 131099, 107, 0, 131112, 187, 0, 131113, 188, 0, 196610, 198, 0, 196612, 669, 0, 196624, 199, 0, 196625, 200, 0, 196635, 199, 0, 196636, 200, 0, 196637, 15, 0, 196648, 201, 0, 196649, 202, 0, 196650, 198, 0, 262146, 214, 0, 262147, 702, 0, 262148, 703, 0, 262159, 219, 0, 262160, 215, 0, 262161, 216, 0, 262171, 215, 0, 262172, 216, 0, 262173, 31, 0, 262184, 217, 0, 262185, 218, 0, 262186, 214, 0, 327682, 230, 0, 327683, 648, 0, 327684, 649, 0, 327685, 129, 0, 327688, 129, 0, 327691, 129, 0, 327694, 129, 0, 327695, 235, 0, 327696, 231, 0, 327697, 232, 0, 327707, 231, 0, 327708, 232, 0, 327710, 129, 0, 327713, 129, 0, 327716, 129, 0, 327719, 129, 0, 327722, 230, 0, 393219, 416, 0, 393221, 146, 0, 393222, 419, 0, 393224, 146, 0, 393225, 422, 0, 393227, 146, 0, 393228, 419, 0, 393230, 146, 0, 393231, 422, 0, 393234, 252, 0, 393239, 370, 0, 393240, 371, 0, 393244, 416, 0, 393246, 146, 0, 393247, 419, 0, 393249, 146, 0, 393250, 422, 0, 393252, 146, 0, 393253, 419, 0, 393255, 146, 0, 393256, 422, 0, 458755, 432, 0, 458756, 433, 0, 458757, 434, 0, 458758, 435, 0, 458759, 433, 0, 458760, 434, 0, 458761, 435, 0, 458762, 433, 0, 458763, 434, 0, 458764, 435, 0, 458765, 433, 0, 458766, 434, 0, 458767, 435, 0, 458770, 268, 0, 458775, 386, 0, 458776, 387, 0, 458780, 432, 0, 458781, 433, 0, 458782, 434, 0, 458783, 435, 0, 458784, 433, 0, 458785, 434, 0, 458786, 435, 0, 458787, 433, 0, 458788, 434, 0, 458789, 435, 0, 458790, 433, 0, 458791, 434, 0, 458792, 435, 0, 524291, 448, 0, 524292, 449, 0, 524293, 450, 0, 524294, 451, 0, 524295, 449, 0, 524296, 450, 0, 524297, 451, 0, 524298, 449, 0, 524299, 450, 0, 524300, 451, 0, 524301, 449, 0, 524302, 450, 0, 524303, 451, 0, 524306, 284, 0, 524311, 402, 0, 524312, 403, 0, 524316, 448, 0, 524317, 449, 0, 524318, 450, 0, 524319, 451, 0, 524320, 449, 0, 524321, 450, 0, 524322, 451, 0, 524323, 449, 0, 524324, 450, 0, 524325, 451, 0, 524326, 449, 0, 524327, 450, 0, 524328, 451, 0, 589829, 145, 0, 589832, 145, 0, 589835, 145, 0, 589838, 145, 0, 589854, 145, 0, 589857, 145, 0, 589860, 145, 0, 589863, 145, 0, 655365, 129, 0, 655368, 129, 0, 655371, 129, 0, 655374, 129, 0, 655390, 129, 0, 655393, 129, 0, 655396, 129, 0, 655399, 129, 0, 720899, 416, 0, 720901, 146, 0, 720902, 419, 0, 720904, 146, 0, 720905, 422, 0, 720907, 146, 0, 720908, 419, 0, 720910, 146, 0, 720911, 422, 0, 720924, 416, 0, 720926, 146, 0, 720927, 419, 0, 720929, 146, 0, 720930, 422, 0, 720932, 146, 0, 720933, 419, 0, 720935, 146, 0, 720936, 422, 0, 786435, 432, 0, 786436, 433, 0, 786437, 434, 0, 786438, 435, 0, 786439, 433, 0, 786440, 434, 0, 786441, 435, 0, 786442, 433, 0, 786443, 434, 0, 786444, 435, 0, 786445, 433, 0, 786446, 434, 0, 786447, 435, 0, 786460, 432, 0, 786461, 433, 0, 786462, 434, 0, 786463, 435, 0, 786464, 433, 0, 786465, 434, 0, 786466, 435, 0, 786467, 433, 0, 786468, 434, 0, 786469, 435, 0, 786470, 433, 0, 786471, 434, 0, 786472, 435, 0, 851971, 448, 0, 851972, 449, 0, 851973, 450, 0, 851974, 451, 0, 851975, 449, 0, 851976, 450, 0, 851977, 451, 0, 851978, 449, 0, 851979, 450, 0, 851980, 451, 0, 851981, 449, 0, 851982, 450, 0, 851983, 451, 0, 851996, 448, 0, 851997, 449, 0, 851998, 450, 0, 851999, 451, 0, 852000, 449, 0, 852001, 450, 0, 852002, 451, 0, 852003, 449, 0, 852004, 450, 0, 852005, 451, 0, 852006, 449, 0, 852007, 450, 0, 852008, 451, 0 )

[node name="Layer3" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393220, 487, 0, 393221, 488, 0, 393222, 489, 0, 393223, 487, 0, 393224, 488, 0, 393225, 489, 0, 393226, 487, 0, 393227, 488, 0, 393228, 489, 0, 393229, 487, 0, 393230, 488, 0, 393231, 489, 0, 393245, 487, 0, 393246, 488, 0, 393247, 489, 0, 393248, 487, 0, 393249, 488, 0, 393250, 489, 0, 393251, 487, 0, 393252, 488, 0, 393253, 489, 0, 393254, 487, 0, 393255, 488, 0, 393256, 489, 0, 458756, 455, 0, 458757, 456, 0, 458758, 457, 0, 458759, 455, 0, 458760, 456, 0, 458761, 457, 0, 458762, 455, 0, 458763, 456, 0, 458764, 457, 0, 458765, 455, 0, 458766, 456, 0, 458767, 457, 0, 458781, 455, 0, 458782, 456, 0, 458783, 457, 0, 458784, 455, 0, 458785, 456, 0, 458786, 457, 0, 458787, 455, 0, 458788, 456, 0, 458789, 457, 0, 458790, 455, 0, 458791, 456, 0, 458792, 457, 0, 524292, 471, 0, 524293, 472, 0, 524294, 473, 0, 524295, 471, 0, 524296, 472, 0, 524297, 473, 0, 524298, 471, 0, 524299, 472, 0, 524300, 473, 0, 524301, 471, 0, 524302, 472, 0, 524303, 473, 0, 524317, 471, 0, 524318, 472, 0, 524319, 473, 0, 524320, 471, 0, 524321, 472, 0, 524322, 473, 0, 524323, 471, 0, 524324, 472, 0, 524325, 473, 0, 524326, 471, 0, 524327, 472, 0, 524328, 473, 0, 720900, 487, 0, 720901, 488, 0, 720902, 489, 0, 720903, 487, 0, 720904, 488, 0, 720905, 489, 0, 720906, 487, 0, 720907, 488, 0, 720908, 489, 0, 720909, 487, 0, 720910, 488, 0, 720911, 489, 0, 720925, 487, 0, 720926, 488, 0, 720927, 489, 0, 720928, 487, 0, 720929, 488, 0, 720930, 489, 0, 720931, 487, 0, 720932, 488, 0, 720933, 489, 0, 720934, 487, 0, 720935, 488, 0, 720936, 489, 0, 786436, 455, 0, 786437, 456, 0, 786438, 457, 0, 786439, 455, 0, 786440, 456, 0, 786441, 457, 0, 786442, 455, 0, 786443, 456, 0, 786444, 457, 0, 786445, 455, 0, 786446, 456, 0, 786447, 457, 0, 786461, 455, 0, 786462, 456, 0, 786463, 457, 0, 786464, 455, 0, 786465, 456, 0, 786466, 457, 0, 786467, 455, 0, 786468, 456, 0, 786469, 457, 0, 786470, 455, 0, 786471, 456, 0, 786472, 457, 0, 851972, 471, 0, 851973, 472, 0, 851974, 473, 0, 851975, 471, 0, 851976, 472, 0, 851977, 473, 0, 851978, 471, 0, 851979, 472, 0, 851980, 473, 0, 851981, 471, 0, 851982, 472, 0, 851983, 473, 0, 851997, 471, 0, 851998, 472, 0, 851999, 473, 0, 852000, 471, 0, 852001, 472, 0, 852002, 473, 0, 852003, 471, 0, 852004, 472, 0, 852005, 473, 0, 852006, 471, 0, 852007, 472, 0, 852008, 473, 0 )

[node name="Layer4" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393220, 509, 0, 393221, 510, 0, 393222, 511, 0, 393223, 525, 0, 393224, 526, 0, 393225, 527, 0, 393226, 493, 0, 393227, 494, 0, 393228, 495, 0, 393229, 525, 0, 393230, 526, 0, 393231, 527, 0, 393245, 509, 0, 393246, 510, 0, 393247, 511, 0, 393248, 525, 0, 393249, 526, 0, 393250, 527, 0, 393251, 493, 0, 393252, 494, 0, 393253, 495, 0, 393254, 525, 0, 393255, 526, 0, 393256, 527, 0, 458756, 522, 0, 458757, 523, 0, 458758, 524, 0, 458759, 426, 0, 458760, 427, 0, 458761, 428, 0, 458762, 429, 0, 458763, 430, 0, 458764, 431, 0, 458765, 461, 0, 458766, 462, 0, 458767, 463, 0, 458781, 522, 0, 458782, 523, 0, 458783, 524, 0, 458784, 426, 0, 458785, 427, 0, 458786, 428, 0, 458787, 429, 0, 458788, 430, 0, 458789, 431, 0, 458790, 461, 0, 458791, 462, 0, 458792, 463, 0, 524292, 538, 0, 524293, 539, 0, 524294, 540, 0, 524295, 442, 0, 524296, 443, 0, 524297, 444, 0, 524298, 445, 0, 524299, 446, 0, 524300, 447, 0, 524301, 477, 0, 524302, 478, 0, 524303, 479, 0, 524317, 538, 0, 524318, 539, 0, 524319, 540, 0, 524320, 442, 0, 524321, 443, 0, 524322, 444, 0, 524323, 445, 0, 524324, 446, 0, 524325, 447, 0, 524326, 477, 0, 524327, 478, 0, 524328, 479, 0, 720900, 525, 0, 720901, 526, 0, 720902, 527, 0, 720903, 509, 0, 720904, 510, 0, 720905, 511, 0, 720906, 525, 0, 720907, 526, 0, 720908, 527, 0, 720909, 493, 0, 720910, 494, 0, 720911, 495, 0, 720925, 525, 0, 720926, 526, 0, 720927, 527, 0, 720928, 509, 0, 720929, 510, 0, 720930, 511, 0, 720931, 525, 0, 720932, 526, 0, 720933, 527, 0, 720934, 493, 0, 720935, 494, 0, 720936, 495, 0, 786436, 423, 0, 786437, 424, 0, 786438, 425, 0, 786439, 522, 0, 786440, 523, 0, 786441, 524, 0, 786442, 461, 0, 786443, 462, 0, 786444, 463, 0, 786445, 490, 0, 786446, 491, 0, 786447, 492, 0, 786461, 423, 0, 786462, 424, 0, 786463, 425, 0, 786464, 522, 0, 786465, 523, 0, 786466, 524, 0, 786467, 461, 0, 786468, 462, 0, 786469, 463, 0, 786470, 490, 0, 786471, 491, 0, 786472, 492, 0, 851972, 439, 0, 851973, 440, 0, 851974, 441, 0, 851975, 538, 0, 851976, 539, 0, 851977, 540, 0, 851978, 477, 0, 851979, 478, 0, 851980, 479, 0, 851981, 506, 0, 851982, 507, 0, 851983, 508, 0, 851997, 439, 0, 851998, 440, 0, 851999, 441, 0, 852000, 538, 0, 852001, 539, 0, 852002, 540, 0, 852003, 477, 0, 852004, 478, 0, 852005, 479, 0, 852006, 506, 0, 852007, 507, 0, 852008, 508, 0 )

[node name="Layer5" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524293, 129, 0, 524296, 129, 0, 524299, 129, 0, 524302, 129, 0, 524318, 129, 0, 524321, 129, 0, 524324, 129, 0, 524327, 129, 0, 851973, 129, 0, 851976, 129, 0, 851979, 129, 0, 851982, 129, 0, 851998, 129, 0, 852001, 129, 0, 852004, 129, 0, 852007, 129, 0, 917509, 145, 0, 917512, 145, 0, 917515, 145, 0, 917518, 145, 0, 917534, 145, 0, 917537, 145, 0, 917540, 145, 0, 917543, 145, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393235, 23, 0, 393238, 25, 0, 458771, 3, 0, 458774, 41, 0, 524307, 55, 0, 524310, 57, 0 )

[node name="DoorManager" parent="." instance=ExtResource( 3 )]
position = Vector2( 336, 112 )
door_name = "elevator"
door_type = ExtResource( 4 )

[node name="DoorManager2" parent="." instance=ExtResource( 3 )]
position = Vector2( 412, 105 )
door_name = "stairwell"
door_type = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 336, 140 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131073, 23, 0, 131075, 24, 0, 131076, 56, 0, 131077, 56, 0, 131086, 56, 0, 131087, 56, 0, 131090, 25, 0, 131098, 23, 0, 131100, 56, 0, 131101, 56, 0, 131102, 56, 0, 131111, 24, 0, 131112, 56, 0, 131113, 56, 0, 131115, 25, 0, 196609, 39, 0, 196626, 41, 0, 196634, 39, 0, 196651, 41, 0, 262145, 39, 0, 262162, 41, 0, 262170, 39, 0, 262187, 41, 0, 327681, 39, 0, 327698, 18, 0, 327706, 17, 0, 327723, 41, 0, 393217, 39, 0, 393259, 41, 0, 458753, 39, 0, 458795, 41, 0, 524289, 39, 0, 524331, 41, 0, 589825, 39, 0, 589867, 41, 0, 655361, 39, 0, 655403, 41, 0, 720897, 39, 0, 720939, 41, 0, 786433, 39, 0, 786475, 41, 0, 851969, 39, 0, 851986, 34, 0, 851987, 56, 0, 851988, 56, 0, 851989, 56, 0, 851990, 56, 0, 851991, 56, 0, 851992, 56, 0, 851993, 56, 0, 851994, 33, 0, 852011, 41, 0, 917505, 39, 0, 917522, 41, 0, 917530, 39, 0, 917547, 41, 0, 983041, 39, 0, 983058, 41, 0, 983066, 39, 0, 983083, 41, 0, 1048577, 55, 0, 1048578, 56, 0, 1048579, 24, 0, 1048580, 24, 0, 1048581, 24, 0, 1048582, 24, 0, 1048583, 24, 0, 1048584, 24, 0, 1048585, 24, 0, 1048586, 24, 0, 1048587, 24, 0, 1048588, 24, 0, 1048589, 24, 0, 1048590, 24, 0, 1048591, 24, 0, 1048592, 24, 0, 1048593, 56, 0, 1048594, 57, 0, 1048602, 55, 0, 1048603, 56, 0, 1048604, 56, 0, 1048605, 56, 0, 1048606, 56, 0, 1048607, 56, 0, 1048608, 56, 0, 1048609, 56, 0, 1048610, 56, 0, 1048611, 56, 0, 1048612, 56, 0, 1048613, 56, 0, 1048614, 56, 0, 1048615, 56, 0, 1048616, 56, 0, 1048617, 56, 0, 1048618, 56, 0, 1048619, 57, 0 )

[node name="LeftCam" type="Camera2D" parent="."]
position = Vector2( 204, 148 )
zoom = Vector2( 1.4, 1.4 )

[node name="RightCam" type="Camera2D" parent="."]
position = Vector2( 511, 149 )
zoom = Vector2( 1.4, 1.4 )

[node name="ElevatorTrigger" type="Area2D" parent="."]
position = Vector2( 336, 133 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorTrigger"]
position = Vector2( 0, 0.75 )
shape = SubResource( 1 )

[node name="RightCamTrigger" type="Area2D" parent="."]
position = Vector2( 426, 168 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCamTrigger"]
position = Vector2( 1.5, 0 )
shape = SubResource( 2 )

[node name="LeftCamTrigger" type="Area2D" parent="."]
position = Vector2( 291, 168 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCamTrigger"]
position = Vector2( 1.5, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="ElevatorTrigger" to="." method="_on_ElevatorTrigger_area_entered"]
[connection signal="body_entered" from="RightCamTrigger" to="." method="_on_RightCamTrigger_body_entered"]
[connection signal="body_entered" from="LeftCamTrigger" to="." method="_on_LeftCamTrigger_body_entered"]
